fix:actualization of project
