# api/infrastructure/views.py
@@ -1,49 +1,144 @@
-# views.py in battlefield_app
-
-from rest_framework import viewsets, status
+from rest_framework import mixins, status, viewsets
 from rest_framework.decorators import action
 from rest_framework.response import Response
-from .models import GameBoard, Gameplay, Player
-from .serializers import GameBoardSerializer, GameplaySerializer, PlayerSerializer
-from users.models import CustomUser
 
-class GameplayViewSet(viewsets.ModelViewSet):
+from api.application.attack_services import AttackServices
+from api.application.gameplay_services import GameplayServices
+from api.application.positioning_services import PositioningServices
+from api.domain.exceptions import (
+    BothPlayersPositionedError,
+    CoordinatesAlreadyHaveShipError,
+    GameNotActiveError,
+    IncompleteShipsPositioningError,
+    InvalidAttackPositionError,
+    InvalidAutomaticAttackError,
+    InvalidBoardCoordinatesError,
+    InvalidPlayerError,
+    InvalidShipPositionError,
+    InvalidTurnError,
+    PlayerAlreadyJoinedError,
+    TurnToPositionShipsError,
+)
+from api.domain.input_data import AttackInput, PositionData, PositionVector
+from api.domain.serializers import CustomUserSerializer, GameplaySerializer
+from api.infrastructure.models import CustomUser, GameBoard, Gameplay, Player
+
+
+class CustomUserViewSet(
+    viewsets.GenericViewSet, mixins.CreateModelMixin, mixins.ListModelMixin
+):
+    queryset = CustomUser.objects.all()
+    serializer_class = CustomUserSerializer
+    
+    @action(detail=False, methods=['POST'])
+    def login_or_create(self, request):
+        username = request.data.get('username')
+        password = request.data.get('password')
+
+        # Try to authenticate the user
+        user = authenticate(username=username, password=password)
+
+        if user:
+            # User exists and is authenticated
+            django_login(request, user)
+            refresh = RefreshToken.for_user(user)
+            return Response({
+                'refresh': str(refresh),
+                'access': str(refresh.access_token),
+                'user': CustomUserSerializer(user).data
+            })
+
+        # User does not exist, return a warning message
+        return Response({'warning': 'User does not exist. Please create a new account.'}, status=status.HTTP_404_NOT_FOUND)
+
+
+class GameplayViewSet(
+    viewsets.GenericViewSet, mixins.CreateModelMixin, mixins.ListModelMixin
+):
     queryset = Gameplay.objects.all()
     serializer_class = GameplaySerializer
 
-    def create(self, request, *args, **kwargs):
+    def create(self, request, *args, **kwargs) -> Response:
         try:
-            # Using the inherited create method
             return super(GameplayViewSet, self).create(request, *args, **kwargs)
-        except serializers.ValidationError as e:
-            return Response({"error": e.detail}, status=status.HTTP_400_BAD_REQUEST)
+        except (
+            PlayerAlreadyJoinedError,
+            InvalidPlayerError,
+            CustomUser.DoesNotExist,
+        ) as e:
+            status_code = status.HTTP_400_BAD_REQUEST
+            if isinstance(e, CustomUser.DoesNotExist):
+                status_code = status.HTTP_404_NOT_FOUND  # Not Found
+            return Response({"error": str(e)}, status=status_code)
         except Exception as e:
-            return Response({"error": "An unexpected error occurred"}, status=status.HTTP_500_INTERNAL_SERVER_ERROR)
+            return Response(
+                {"error": "An unexpected error occurred"},
+                status=status.HTTP_500_INTERNAL_SERVER_ERROR,
+            )
 
-    @action(detail=True, methods=['POST'])
-    def join_game(self, request, pk=None):
-        user = request.user
-        gameplay = self.get_object()
+    @action(detail=True, methods=["POST"])
+    def position_ships(self, request, pk=None) -> Response:
+        try:
+            gameplay = self.get_object()
 
-        # Check if the game already has two players
-        if gameplay.players.count() >= 2:
-            raise ValidationError("The game already has two players.")
+            player = request.data.get("player")
+            positions_raw = request.data.get("positions", [])
 
-        # Check if the joining user is already a player
-        if gameplay.players.filter(id=user.id).exists():
-            raise ValidationError("You are already a player in this game.")
+            # Instantiate PositionData and PositionVector
+            positions = [PositionVector(**pos) for pos in positions_raw]
+            position_data = PositionData(player=player, positions=positions)
 
-        Player.objects.create(user=user, gameplay=gameplay, is_automatic=False)
+            # Position ships and get board state
+            board_state = PositioningServices.position_ships(
+                gameplay=gameplay, data=position_data
+            )
 
-        serializer = GameplaySerializer(gameplay)
-        return Response(serializer.data, status=status.HTTP_200_OK)
+            return Response(
+                {"message": "Ships positioned successfully", "board": board_state},
+                status=status.HTTP_200_OK,
+            )
+        except (
+            GameNotActiveError,
+            InvalidTurnError,
+            InvalidShipPositionError,
+            InvalidBoardCoordinatesError,
+            CoordinatesAlreadyHaveShipError,
+            IncompleteShipsPositioningError,
+        ) as e:
+            return Response({"error": str(e)}, status=status.HTTP_400_BAD_REQUEST)
+        except BothPlayersPositionedError as e:
+            return Response({"error": str(e)}, status=status.HTTP_409_CONFLICT)
+        except TurnToPositionShipsError as e:
+            return Response({"error": str(e)}, status=status.HTTP_403_FORBIDDEN)
+        except Exception as e:
+            return Response(
+                {"error": "An unexpected error occurred"},
+                status=status.HTTP_500_INTERNAL_SERVER_ERROR,
+            )
 
-    @action(detail=True, methods=['GET'])
-    def attack(self, request, pk=None):
-        x = request.query_params.get('x', None)
-        y = request.query_params.get('y', None)
-        gameplay = self.get_object()
-        board = gameplay.board
-        # Add your attack logic here
-        message = "Hit or Miss based on your logic"
-        return Response({"message": message}, status=status.HTTP_200_OK)
+    @action(detail=True, methods=["GET"])
+    def attack(self, request, pk=None) -> Response:
+        try:
+            gameplay = self.get_object()
+            attack_data = AttackInput(**request.data)
+
+            player = attack_data.player
+            x, y = attack_data.coordinates
+
+            message, winner = AttackServices.handle_attack(gameplay, player, x, y)
+
+            return Response(
+                {"message": message},
+                status=status.HTTP_200_OK if not winner else status.HTTP_201_CREATED,
+            )
+        except InvalidAttackPositionError as e:
+            return Response({"error": str(e)}, status=status.HTTP_400_BAD_REQUEST)
+        except InvalidAutomaticAttackError as e:
+            return Response({"error": str(e)}, status=status.HTTP_409_CONFLICT)
+        except InvalidPlayerError as e:
+            return Response({"error": str(e)}, status=status.HTTP_403_FORBIDDEN)
+        except Exception as e:
+            return Response(
+                {"error": "An unexpected error occurred"},
+                status=status.HTTP_500_INTERNAL_SERVER_ERROR,
+            )
